syntax = "proto3";

package habrapi;

service HabrApi {
    rpc GetKarma(KarmaRequest) returns (KarmaResponse) {}
    rpc PostArticle(PostArticleRequest) returns (PostArticleResponse) {}
}

message KarmaRequest {
    string username = 1;
}

message KarmaResponse {
    string username = 1;
    float karma = 2;
}

message PostArticleRequest {
    string title = 1;
    string body = 2;
    repeated string tag = 3;
    repeated string hub = 4;
}

message PostArticleResponse {
    bool posted = 1;
    string url = 2;
    string time = 3;
    string error_code = 4;
}